add implementations for clients' and Gateway projects
