# Gateway/Adapters/Http/Contract/src/OpenApiContractV1/Models/Status.cs
@@ -1,67 +1,0 @@
-/*
- * Customer BFF
- *
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * The version of the OpenAPI document: 1.0.0
- * 
- * Generated by: https://openapi-generator.tech
- */
-
-using System;
-using System.Linq;
-using System.Text;
-using System.Collections.Generic;
-using System.ComponentModel;
-using System.ComponentModel.DataAnnotations;
-using System.Runtime.Serialization;
-using Newtonsoft.Json;
-using OpenApiContractV1.Converters;
-
-namespace OpenApiContractV1.Models
-{ 
-        /// <summary>
-        /// Gets or Sets Status
-        /// </summary>
-        [TypeConverter(typeof(CustomEnumConverter<Status>))]
-        [JsonConverter(typeof(Newtonsoft.Json.Converters.StringEnumConverter))]
-        public enum Status
-        {
-            
-            /// <summary>
-            /// Enum ReleasedEnum for released
-            /// </summary>
-            [EnumMember(Value = "released")]
-            ReleasedEnum = 1,
-            
-            /// <summary>
-            /// Enum AddedEnum for added
-            /// </summary>
-            [EnumMember(Value = "added")]
-            AddedEnum = 2,
-            
-            /// <summary>
-            /// Enum ReadiedForReleaseEnum for readiedForRelease
-            /// </summary>
-            [EnumMember(Value = "readiedForRelease")]
-            ReadiedForReleaseEnum = 3,
-            
-            /// <summary>
-            /// Enum OccupiedEnum for occupied
-            /// </summary>
-            [EnumMember(Value = "occupied")]
-            OccupiedEnum = 4,
-            
-            /// <summary>
-            /// Enum ServicedEnum for serviced
-            /// </summary>
-            [EnumMember(Value = "serviced")]
-            ServicedEnum = 5,
-            
-            /// <summary>
-            /// Enum DeletedEnum for deleted
-            /// </summary>
-            [EnumMember(Value = "deleted")]
-            DeletedEnum = 6
-        }
-}
